--- a/src/Optivem.Repository/Optivem.Repository.csproj
+++ b/src/Optivem.Repository/Optivem.Repository.csproj
@@ -2,6 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <Authors>Valentina Cupac</Authors>
+    <Company>Optivem</Company>
+    <Description>Interfaces for Generic Repository and Unit of Work</Description>
+    <Copyright>© Optivem. All rights reserved.</Copyright>
+    <PackageLicenseUrl>https://github.com/optivem/csharp-repository/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://opensource.optivem.com/csharp-repository</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/optivem/csharp-repository</RepositoryUrl>
+    <PackageTags>generic repository; unit of work</PackageTags>
   </PropertyGroup>
 
 </Project>
