--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Optivem .NET Commons Persistence
-description: Interfaces for generic repository and generic unit of work patterns
+title: Optivem Enterprise Framework (Java)
+description: Framework for enterprise applications in Java
 google_analytics: UA-63306472-4
 show_downloads: true
 theme: jekyll-theme-cayman
